Allow coveralls failure in github action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -241,4 +241,4 @@ jobs:
       - name: Coveralls Finished
         run: |
           pip install --upgrade coveralls
-          coveralls --service=github --finish
+          coveralls --service=github --finish || true
