--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,13 +84,13 @@ jobs:
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
           pip install torch==1.9.0+cpu torchvision==0.10.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
           pip install .[test]
-          pip install coveralls
+          pip install --upgrade coveralls
           pip freeze
       - name: Run unit tests
         run: |
           pytest -vs --cov=pyro --cov-config .coveragerc --stage unit --durations 20
       - name: Submit to coveralls
-        run: coveralls --service=github
+        run: coveralls --service=github || true
         env:
           COVERALLS_PARALLEL: true
           COVERALLS_FLAG_NAME: ${{ matrix.test-name }}
@@ -116,7 +116,7 @@ jobs:
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
           pip install torch==1.9.0+cpu torchvision==0.10.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
           pip install .[test]
-          pip install coveralls
+          pip install --upgrade coveralls
           pip freeze
       - name: Run examples
         run: |
@@ -124,7 +124,7 @@ jobs:
           grep -l smoke_test tutorial/source/*.ipynb | xargs grep -L 'smoke_test = False' \
                             | CI=1 xargs pytest -vx --nbval-lax --current-env
       - name: Submit to coveralls
-        run: coveralls --service=github
+        run: coveralls --service=github || true
         env:
           COVERALLS_PARALLEL: true
           COVERALLS_FLAG_NAME: ${{ matrix.test-name }}
@@ -150,13 +150,13 @@ jobs:
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
           pip install torch==1.9.0+cpu torchvision==0.10.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
           pip install .[test]
-          pip install coveralls
+          pip install --upgrade coveralls
           pip freeze
       - name: Run integration test (batch 1)
         run: |
           pytest -vs --cov=pyro --cov-config .coveragerc --stage integration_batch_1 --durations 10
       - name: Submit to coveralls
-        run: coveralls --service=github
+        run: coveralls --service=github || true
         env:
           COVERALLS_PARALLEL: true
           COVERALLS_FLAG_NAME: ${{ matrix.test-name }}
@@ -182,13 +182,13 @@ jobs:
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
           pip install torch==1.9.0+cpu torchvision==0.10.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
           pip install .[test]
-          pip install coveralls
+          pip install --upgrade coveralls
           pip freeze
       - name: Run integration test (batch 2)
         run: |
           pytest -vs --cov=pyro --cov-config .coveragerc --stage integration_batch_2 --durations 10
       - name: Submit to coveralls
-        run: coveralls --service=github
+        run: coveralls --service=github || true
         env:
           COVERALLS_PARALLEL: true
           COVERALLS_FLAG_NAME: ${{ matrix.test-name }}
@@ -215,14 +215,14 @@ jobs:
           pip install torch==1.9.0+cpu torchvision==0.10.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
           pip install .[test]
           pip install -e .[funsor]
-          pip install coveralls
+          pip install --upgrade coveralls
           pip freeze
       - name: Run funsor tests
         run: |
           pytest -vs --cov=pyro --cov-config .coveragerc --stage funsor --durations 10
           CI=1 pytest -vs --cov=pyro --cov-config .coveragerc --stage test_examples --durations 10 -k funsor
       - name: Submit to coveralls
-        run: coveralls --service=github
+        run: coveralls --service=github || true
         env:
           COVERALLS_PARALLEL: true
           COVERALLS_FLAG_NAME: ${{ matrix.test-name }}
