--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -7,4 +7,4 @@ observations>=0.1.4
 opt_einsum>=2.3.2
 pyro-api>=0.1.1
 tqdm>=4.36
-funsor[torch]
+funsor[torch] @ git+git://github.com/pyro-ppl/funsor.git@normalize-logaddexp
