More fixes to torch.linalg.solve_triangular

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,10 @@ filterwarnings = error
     ignore:numpy.dtype size changed:RuntimeWarning
     ignore:Mixed memory format inputs detected:UserWarning
     ignore:Setting attributes on ParameterDict:UserWarning
+    ignore:Creating a tensor from a list of numpy.ndarrays is extremely slow
     ignore::DeprecationWarning
     ignore:CUDA initialization:UserWarning
+    ignore:__floordiv__ is deprecated:UserWarning
     ignore:floor_divide is deprecated:UserWarning
     ignore:torch.tensor results are registered as constants in the trace
     once::DeprecationWarning
