Updated the MakeFile
To fix the issue of latest PyTorch version requiring CUDA > 9

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -2,7 +2,7 @@
 
 DOCKER_FILE=Dockerfile
 BASE_IMG=ubuntu:18.04
-BASE_CUDA_IMG=nvidia/cuda:11.6.0-base-ubuntu18.04
+BASE_CUDA_IMG=nvidia/cuda:11.5.0-cudnn8-runtime-ubuntu18.04
 DOCKER_CMD=docker
 DOCKER_GPU_CMD=nvidia-docker
 HOST_WORK_DIR=${HOME}/pyro_docker
