--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -6,4 +6,4 @@ observations>=0.1.4
 opt_einsum>=2.3.2
 pyro-api>=0.1.1
 tqdm>=4.36
-funsor[torch] @ git+git://github.com/pyro-ppl/funsor.git@sampled-funsor
+funsor[torch] @ git+https://github.com/pyro-ppl/funsor.git@sampled-funsor
