--- a/setup.cfg
+++ b/setup.cfg
@@ -90,3 +90,7 @@ ignore_errors = True
 [mypy-pyro.util.*]
 ignore_errors = True
 warn_unused_ignores = True
+
+[mypy-pyro.params.*]
+ignore_errors = True
+warn_unused_ignores = True
