--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
         run: |
           sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
           sudo apt-get update
-          sudo apt-get install gcc-8 g++-8 ninja-build graphviz
+          sudo apt-get install gcc-8 g++-8 ninja-build graphviz pandoc
           python -m pip install --upgrade pip wheel 'setuptools!=58.5.*'
           # Keep track of pyro-api master branch
           pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
