--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,34 @@ jobs:
           pip install torch==1.11.0+cpu torchvision==0.12.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
           pip install .[test]
           pip install -r docs/requirements.txt
+          pip freeze
+      - name: Build docs and run doctest
+        run: |
+          make docs
+          make doctest
+  tutorials-html:
+    runs-on: ubuntu-20.04
+    needs: lint
+    strategy:
+      matrix:
+        python-version: [3.7]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+          sudo apt-get update
+          sudo apt-get install gcc-8 g++-8 ninja-build graphviz pandoc
+          python -m pip install --upgrade pip wheel 'setuptools!=58.5.*,<60'
+          # Keep track of pyro-api master branch
+          pip install https://github.com/pyro-ppl/pyro-api/archive/master.zip
+          pip install torch==1.11.0+cpu torchvision==0.12.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+          pip install .[test]
+          pip install -r docs/requirements.txt
           # requirements for tutorials (from .[dev])
           sudo apt-get install pandoc
           pip install nbformat
@@ -65,10 +93,8 @@ jobs:
           pip install pypandoc
           pip install ninja
           pip freeze
-      - name: Build docs and run doctest
+      - name: Build HTML from tutorials
         run: |
-          make docs
-          make doctest
           SPHINXOPTS="-E" make tutorial
   unit:
     runs-on: ubuntu-20.04
